--- a/gettogether/main_app/templates/base.html
+++ b/gettogether/main_app/templates/base.html
@@ -19,9 +19,9 @@
                     <li><a href="{% url 'home' %}" class="left brand-logo">&nbsp;&nbsp;GetTogether</a></li>
                 </ul>
                 <ul class="right">
-                  <li><a href="">About</a></li>
+                  <li><a href="{% url 'about' %}">About</a></li>
                   <li><a href="">Add Event</a></li>
-                  <li><a href="">All Events</a></li>
+                  <li><a href="{% url 'index' %}">All Events</a></li>
                 </ul>
             </div>
         </nav>
