--- a/gettogether/main_app/templates/base.html
+++ b/gettogether/main_app/templates/base.html
@@ -20,7 +20,7 @@
                 </ul>
                 <ul class="right">
                   <li><a href="{% url 'about' %}">About</a></li>
-                  <li><a href="">Add Event</a></li>
+                  <li><a href="{% url 'events_create' %}">Add Event</a></li>
                   <li><a href="{% url 'index' %}">All Events</a></li>
                 </ul>
             </div>
