--- a/gettogether/main_app/templates/events/index.html
+++ b/gettogether/main_app/templates/events/index.html
@@ -6,7 +6,7 @@
 {% for event in events %}
   <div class="card">
     <div class="card-content">
-      <span class="card-title">{{ Event.title }}</span>
+      <span class="card-title">{{ event.title }}</span>
       <p>Date/Time: {{ event.datetime }}</p>
       <p>Description: {{ event.description }}</p>
       <p>Address: {{ event.address }}</p>
