--- a/gettogether/main_app/templates/events/index.html
+++ b/gettogether/main_app/templates/events/index.html
@@ -4,16 +4,18 @@
 <h1>All Events</h1>
 
 {% for event in events %}
-  <div class="card">
-    <div class="card-content">
+<div class="card">
+  <div class="card-content">
+    <a href="{% url 'detail' event.id %}">
       <span class="card-title">{{ event.title }}</span>
-      <p>Date/Time: {{ event.datetime }}</p>
-      <p>Description: {{ event.description }}</p>
-      <p>Address: {{ event.address }}</p>
-      <p>Neighborhood: {{ event.neighborhood }}</p>
-      <p>City: {{ event.city }}</p>
-    </div>
+    </a>
+    <p>Date/Time: {{ event.datetime }}</p>
+    <p>Description: {{ event.description }}</p>
+    <p>Address: {{ event.address }}</p>
+    <p>Neighborhood: {{ event.neighborhood }}</p>
+    <p>City: {{ event.city }}</p>
   </div>
+</div>
 {% endfor %}
 
 {% endblock %}
