fixes comment functionality

--- a/main_app/templates/main_app/comment_confirm_delete.html
+++ b/main_app/templates/main_app/comment_confirm_delete.html
@@ -8,6 +8,6 @@
   <form action="" method="POST">
     {% csrf_token %}
     <input type="submit" value="Yes - Delete!" class="btn">
-    <a href="{% url 'detail' event.id %}">Cancel</a>
+    <a href="{% url 'detail' object.event.id %}">Cancel</a>
   </form>
 {% endblock %}
