full crud/timer functionality implemented

--- a/main_app/templates/events/detail.html
+++ b/main_app/templates/events/detail.html
@@ -8,7 +8,8 @@
     <div class="card">
         <div class="card-content">
           <span class="card-title">{{ event.title }}</span>
-          <p>Date/Time: {{ event.datetime }}</p>
+          <p>Date: {{ event.date }}</p>
+          <p>Time: {{ event.time }}</p>
           <p>Description: {{ event.description }}</p>
           <p>Address: {{ event.address }}</p>
           <p>Neighborhood: {{ event.neighborhood }}</p>
