about page styling and details

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,12 +1,94 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>About</h1>
-  <hr />
-  <p>We are a team of three software developers driven to create a not-for-profit, community-centric app that makes finding events fun and easy.</p>
+<h1>About</h1>
+<p>Finding affordable events that you want to attend in your city can be difficult enough, and finding convenient,
+  age-inclusive events to attend in your neighborhood can feel next to impossible. </p>
+<p>We are a team of three software developers on a mission to create a community-centric app that makes finding events
+  and putting on events simple and fun!</p>
+  <br>
+<hr>
+<h3>Advantages of GetTogether</h3>
+<div class="row">
+  <div class="col s1">
+    <h5>Local</h5>
+  </div>
+  <div class="col s2"></div>
+  <div class="col s9">
+    <p>All of our events are made by members of the community</p>
+  </div>
+</div>
+<div class="row">
+  <div class="col s1">
+    <h5>Free</h5>
+  </div>
+  <div class="col s2"></div>
+  <div class="col s9">
+    <p>Our app will always be free to the users</p>
+  </div>
+</div>
+<div class="row">
+  <div class="col s1">
+    <h5>Connection</h5>
+  </div>
+  <div class="col s2"></div>
+  <div class="col s9">
+    <p>Build deeper connections with your community over our discussion/comment forums</p>
+  </div>
+</div>
+<br>
+<hr>
+<h3>Our Team</h3>
+<div class="row" id="headshots">
+  <div class="col s3">
+    <img src="https://i.imgur.com/AEdIe8g.png" alt="Cormac Pujals' headshot" class="responsive-img">
+  </div>
+  <div class="col s1"></div>
+  <div class="col s3">
+    <img src="https://i.imgur.com/UvAZ1Dl.png" alt="Kailah Korsh's headshot" class="responsive-img">
+  </div>
+  <div class="col s1"></div>
+  <div class="col s3">
+    <img src="https://i.imgur.com/Am4qGm4.png" alt="Taylor Romoser's headshot" class="responsive-img">
+  </div>
+</div>
+<div class="row" id="names-and-descriptions">
+  <div class="col s3">
+    <h5>Cormac Pujals</h5>
+  </div>
+  <div class="col s1"></div>
+  <div class="col s3">
+    <h5>Kailah Korsh</h5>
+  </div>
+  <div class="col s1"></div>
+  <div class="col s3">
+    <h5>Taylor Romoser</h5>
+  </div>
+  <div class="col s3">
+    <p>
+      • Scrum Master <br>
+      • Full Stack Developer <br>
+      • 6+ years in market research and management
+    </p>
+  </div>
+  <div class="col s1"></div>
+  <div class="col s3">
+    <p>
+      • GitHub Manager <br>
+      • Full Stack Developer <br>
+      • Creative Director <br>
+      • 6+ years in entertainment business
+    </p>
+  </div>
+  <div class="col s1"></div>
+  <div class="col s3">
+    <p>
+      • Database Manager <br>
+      • Full Stack Developer <br>
+      • 8+ years booking shows
+    </p>
+  </div>
+</div>
 
-  <h2>Photo Here</h2>
 
-  <footer>All Rights Reserved, &copy; 2022 GetTogether</footer>  
 {% endblock %}
-  
