--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Home</h1>
+<h1>GetTogether</h1>
+<hr>
+<p>We are on a mission to bring individuals closer to their community by enabling community members to easily coordinate free and low cost events for all ages. <a href="{% url 'login' %}">Log in</a> or <a href="{% url 'signup' %}">sign up</a> to get started.</p>
+<h5>Let's get together!</h5>
 
 {% endblock %}
