dropdown cities menu in nav. events ordered by neighborhood on cities page

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -8,7 +8,7 @@
   and putting on events simple and fun!</p>
   <br>
 <hr>
-<h3>Advantages of GetTogether</h3>
+<h3>Advantages</h3>
 <div class="row">
   <div class="col s1">
     <h5>Local</h5>
@@ -29,11 +29,20 @@
 </div>
 <div class="row">
   <div class="col s1">
-    <h5>Connection</h5>
+    <h5>Connectivity</h5>
   </div>
   <div class="col s2"></div>
   <div class="col s9">
     <p>Build deeper connections with your community over our discussion/comment forums</p>
+  </div>
+</div>
+<div class="row">
+  <div class="col s1">
+    <h5>Safe</h5>
+  </div>
+  <div class="col s2"></div>
+  <div class="col s9">
+    <p>As a non-profit, we won't sell your data to a third-party nor bombard you with advertisements</p>
   </div>
 </div>
 <br>
