--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -8,6 +8,19 @@
   and putting on events simple and fun!</p>
   <br>
 <hr>
+<br>
+<div class="carousel carousel-slider">
+  <img src="https://i.imgur.com/HR3o6BJ.png" alt="community members gardening" class="carousel-item">
+  <img src="https://i.imgur.com/yuOniwi.png" alt="community members cleaning the park" class="carousel-item">
+  <img src="https://i.imgur.com/s4Ju3ya.png" alt="community members at a yard sale" class="carousel-item">
+  <img src="https://i.imgur.com/e52SSu8.png" alt="community members hiking" class="carousel-item">
+  <img src="https://i.imgur.com/uR7KpXW.png" alt="kids crafting" class="carousel-item">
+  <img src="https://i.imgur.com/cljujRR.png" alt="teens roasting marshmallows" class="carousel-item">
+  <img src="https://i.imgur.com/tjPWaaF.png" alt="community members gardening" class="carousel-item">
+  <img src="https://i.imgur.com/5zRoebq.png" alt="community members at a book club" class="carousel-item">
+</div>
+<br>
+<hr>
 <h3>Advantages</h3>
 <div class="row">
   <div class="col s1">
@@ -99,5 +112,11 @@
   </div>
 </div>
 
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+  var elems = document.querySelectorAll('.carousel');
+  var instances = M.Carousel.init(elems);
+});
+</script>
 
 {% endblock %}
