--- a/main_app/templates/events/detail.html
+++ b/main_app/templates/events/detail.html
@@ -47,7 +47,7 @@
         <thead>
           <tr>
             <th>User</th>
-            <th>Content</th>
+            <th>Comment</th>
             <th>Date</th>
           </tr>
         </thead>
