--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GetTogether</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -34,7 +37,7 @@
                         <li><a href="{% url 'events_losangeles' %}">Los Angeles</a></li>
                         <li><a href="{% url 'events_sanfrancisco' %}">San Francisco</a></li>
                     </ul>
-                    <li><a href="{% url 'logout' %}">Welcome,&nbsp;{{ user.username }}!<span>&nbsp; Sign Out</span></a></li>
+                    <li><a href="{% url 'logout' %}">Welcome,&nbsp;{{ user.username|capfirst }}!<span>&nbsp; Sign Out</span></a></li>
                     {% else %}
                     <li><a href="{% url 'signup' %}">Sign Up</a></li>
                     <li><a href="{% url 'login' %}">Log In</a></li>
