--- a/main_app/templates/main_app/event_form.html
+++ b/main_app/templates/main_app/event_form.html
@@ -24,7 +24,8 @@
     format: 'yyyy-mm-dd',
     defaultDate: new Date(),
     setDefaultDate: true,
-    autoClose: true
+    autoClose: true,
+    minDate: new Date()
   });
 
   const timeEl = document.getElementById('id_time');
