--- a/main_app/templates/events/events_seattle.html
+++ b/main_app/templates/events/events_seattle.html
@@ -4,19 +4,68 @@
 <h1>Seattle</h1>
 
 {% for event in events %}
+{% if event.date >= today %}
 <div class="card">
-  <div class="card-content">
-    <a href="{% url 'detail' event.id %}">
-      <span class="card-title">{{ event.title }}</span>
-    </a>
-    <p>Date: {{ event.date }}</p>
-    <p>Time: {{ event.time }}</p>
-    <p>Description: {{ event.description }}</p>
-    <p>Address: {{ event.address }}</p>
-    <p>Neighborhood: {{ event.neighborhood }}</p>
-    <p>City: {{ event.city }}</p>
+  <div class="row">
+    <div class="col s6">
+    <div class="card-content">
+      <a href="{% url 'detail' event.id %}">
+        <span class="card-title">{{ event.title }}</span>
+      </a>
+      <p>Date: {{ event.date }}</p>
+      <p>Time: {{ event.time }}</p>
+      <p>Description: {{ event.description }}</p>
+      <p>Address: {{ event.address }}</p>
+      <p>Neighborhood: {{ event.neighborhood }}</p>
+      <p>City: {{ event.city }}</p>
+    </div>
+  </div>
+    <div class="col s6">
+      <div>
+        {% for photo in event.photo_set.all %}
+        {% if forloop.counter == 1 %} 
+        <img class="responsive-img card-panel" src="{{photo.url}}">
+        {% endif %}
+        {% endfor %}
+      </div>
+    </div>
   </div>
 </div>
+{% endif %}
 {% endfor %}
+<br>
+<hr>
+<br>
+<h2>Past Events</h2>
+{% for event in events %}
+{% if event.date < today %} 
+<div class="card">
+  <div class="row">
+    <div class="col s6">
+    <div class="card-content">
+      <a href="{% url 'detail' event.id %}">
+        <span class="card-title">{{ event.title }}</span>
+      </a>
+      <p>Date: {{ event.date }}</p>
+      <p>Time: {{ event.time }}</p>
+      <p>Description: {{ event.description }}</p>
+      <p>Address: {{ event.address }}</p>
+      <p>Neighborhood: {{ event.neighborhood }}</p>
+      <p>City: {{ event.city }}</p>
+    </div>
+  </div>
+    <div class="col s6">
+      <div>
+        {% for photo in event.photo_set.all %}
+        {% if forloop.counter == 1 %} 
+        <img class="responsive-img card-panel" src="{{photo.url}}">
+        {% endif %}
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+</div>
+  {% endif %}
+  {% endfor %}
 
 {% endblock %}
