--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -115,7 +115,9 @@
 <script>
   document.addEventListener('DOMContentLoaded', function() {
   var elems = document.querySelectorAll('.carousel');
-  var instances = M.Carousel.init(elems);
+  var instances = M.Carousel.init(elems, {
+    indicators: true
+  });
 });
 </script>
 
