--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -21,7 +21,9 @@
 <script>
     document.addEventListener('DOMContentLoaded', function() {
     var elems = document.querySelectorAll('.carousel');
-    var instances = M.Carousel.init(elems);
+    var instances = M.Carousel.init(elems, {
+      indicators: true
+    });
   });
 </script>
 
