--- a/main_app/templates/main_app/event_form.html
+++ b/main_app/templates/main_app/event_form.html
@@ -7,7 +7,7 @@
 <h1>Add Event</h1>
 {% endif %}
 <!-- Leaving the action empty makes the form post to the same url used to display it -->
-<form action="" method="post">
+<form class="z-depth-3" action="" method="post">
   <!-- Django requires the following for security purposes -->
   {% csrf_token %}
   <table>
