--- a/main_app/templates/events/detail.html
+++ b/main_app/templates/events/detail.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     {% for photo in event.photo_set.all %}
-    <img class="responsive-img card-panel" src="{{photo.url}}">
+    <img class="responsive-img card-panel" src="{{photo.url}}">&nbsp;&nbsp;&nbsp;&nbsp;
     {% empty %}
     <div class="card-panel center-align">No Photos Uploaded</div>
     {% endfor %}
@@ -34,9 +34,10 @@
       <button type="submit" class="btn">Upload Photo</button>
     </form>
     <!-- Add Comment -->
+    <h3>Comments</h3>
     <div class="col s12">
       {% if user.is_authenticated %}
-      <form class="z-depth-1" action="{% url 'add_comment' event.id %}" method="POST">
+      <form class="comment-form" action="{% url 'add_comment' event.id %}" method="POST">
         {% csrf_token %}
         {{ comment_form.as_p }}
         <input type="submit" class="btn" value="Add Comment">
