event details styling

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -45,9 +45,13 @@ form {
 }
 
 .card .card-title {
-  font-size: 32px;
+  font-size: 40px;
   color: #4A5954;
   font-weight: 600;
+}
+
+.card .card-content .card-title {
+  margin-bottom: 4vmin;
 }
 
 .card {
@@ -64,19 +68,9 @@ form {
 
 .card .card-action {
   padding-left: 0px;
+  padding-bottom: 0px;
 }
 
-
-input > #file-upload-button {
-  text-decoration: none;
-    color: #fff;
-    background-color: #26a69a;
-    text-align: center;
-    letter-spacing: .5px;
-    -webkit-transition: background-color .2s ease-out;
-    transition: background-color .2s ease-out;
-    cursor: pointer;
-}
 
 form.comment-form {
   background-color: #bcdcc13e;
@@ -84,4 +78,15 @@ form.comment-form {
 
 img.card-panel {
   width: 60vmin;
+}
+
+a, nav > a {
+  color: #4A5954;
+}
+
+footer.page-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
