--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -36,12 +36,17 @@
                         <li><a href="{% url 'events_losangeles' %}">Los Angeles</a></li>
                         <li><a href="{% url 'events_sanfrancisco' %}">San Francisco</a></li>
                     </ul>
-                    <li><a href="{% url 'logout' %}">Welcome,&nbsp;{{ user.username|capfirst }}!<span>&nbsp; Sign Out</span></a></li>
+                    <li><a href="{% url 'logout' %}"><span>Sign Out</span></a></li>
                     {% else %}
                     <li><a href="{% url 'signup' %}">Sign Up</a></li>
                     <li><a href="{% url 'login' %}">Log In</a></li>
                     {% endif %}
                 </ul>
+                {% if user.is_authenticated %}
+                <ul class="right">
+                    <li>Welcome,&nbsp;{{ user.username|capfirst }}!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+                </ul>
+                {% endif %}
             </div>
         </nav>
     </header>
@@ -51,7 +56,8 @@
         {% endblock %}
     </main>
     <footer class="page-footer">
-        <div class="right">All Rights Reserved, &copy; 2022 GetTogether &nbsp;</div>
+        <div class="footer-text">All Rights Reserved, &copy; 2022 GetTogether &nbsp;
+        </div>
     </footer>
 
     <script>
