--- a/main_app/templates/events/index.html
+++ b/main_app/templates/events/index.html
@@ -38,7 +38,8 @@
 <br>
 <h2>Past Events</h2>
 {% for event in events %}
-{% if event.date < today %} <div class="card">
+{% if event.date < today %} 
+<div class="card">
   <div class="row">
     <div class="col s6">
       <div class="card-content">
@@ -66,5 +67,4 @@
   </div>
   {% endif %}
   {% endfor %}
-
   {% endblock %}
